feat: getAnnouncements