@@ -8,11 +8,11 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 import org.springframework.web.client.RestTemplate;
-import org.web3j.protocol.core.methods.response.TransactionReceipt;
 import org.springframework.web.multipart.MultipartFile;
 import org.springframework.http.MediaType;
 
 import java.util.List;
+import java.util.Map;
 import java.util.stream.Collectors;
 
 @RestController
@@ -32,32 +32,82 @@ public class AdminController {
 
     @GetMapping("/get-announcements")
     public List<AnnouncementItem> getAnnouncementEvents() throws Exception {
-        // Get all past AnnouncementAdded events
-        List<Management.AnnouncementAddedEventResponse> events =
+        var contractAddress = managementContract.getContractAddress();
+        var startBlock = org.web3j.protocol.core.DefaultBlockParameterName.EARLIEST;
+        var endBlock = org.web3j.protocol.core.DefaultBlockParameterName.LATEST;
+
+        List<Management.AnnouncementAddedEventResponse> addedEvents =
             managementContract.announcementAddedEventFlowable(
-                new org.web3j.protocol.core.DefaultBlockParameterNumber(0),
-                org.web3j.protocol.core.DefaultBlockParameterName.LATEST
+                new org.web3j.protocol.core.methods.request.EthFilter(startBlock, endBlock, contractAddress)
             ).toList().blockingGet();
 
-        return events.stream().map(ev -> {
-            String hash  = ev.ipfsHash;
-            long   start = ev.startTime.longValue();
-            long   end   = ev.endTime.longValue();
+        List<Management.AnnouncementIpfsHashModifiedEventResponse> ipfsModifiedEvents =
+            managementContract.announcementIpfsHashModifiedEventFlowable(
+                new org.web3j.protocol.core.methods.request.EthFilter(startBlock, endBlock, contractAddress)
+            ).toList().blockingGet();
 
-            // Fetch manifest from IPFS via Pinata gateway
-            PinataManifest manifest = rest.getForObject(
-                "https://gateway.pinata.cloud/ipfs/" + hash,
-                PinataManifest.class
-            );
+        List<Management.AnnouncementTimeModifiedEventResponse> timeModifiedEvents =
+            managementContract.announcementTimeModifiedEventFlowable(
+                new org.web3j.protocol.core.methods.request.EthFilter(startBlock, endBlock, contractAddress)
+            ).toList().blockingGet();
 
-            return new AnnouncementItem(
-                hash,
-                manifest != null ? manifest.getTitle() : "",
-                manifest != null ? manifest.getFileCid() : "",
-                start,
-                end
-            );
-        }).collect(Collectors.toList());
+        List<Management.AnnouncementDeletedEventResponse> deletedEvents =
+            managementContract.announcementDeletedEventFlowable(
+                new org.web3j.protocol.core.methods.request.EthFilter(startBlock, endBlock, contractAddress)
+            ).toList().blockingGet();
+
+        // 2. Reconstruct the current state of announcements
+        Map<String, AnnouncementState> announcementMap = new java.util.HashMap<>();
+        for (var event : addedEvents) {
+            announcementMap.put(event.ipfsHash, new AnnouncementState(
+                event.ipfsHash,
+                event.startTime.longValue(),
+                event.endTime.longValue()
+            ));
+        }
+        for (var event : ipfsModifiedEvents) {
+            AnnouncementState state = announcementMap.remove(event.ipfsHash_);
+            if (state != null) {
+                state.ipfsHash = event.ipfsHash;
+                announcementMap.put(event.ipfsHash, state);
+            }
+        }
+        for (var event : timeModifiedEvents) {
+            AnnouncementState state = announcementMap.get(event.ipfsHash);
+            if (state != null) {
+                state.startDate = event.startTime.longValue();
+                state.endDate = event.endTime.longValue();
+            }
+        }
+        for (var event : deletedEvents) {
+            announcementMap.remove(event.ipfsHash);
+        }
+
+        // 3. Filter out expired announcements (do not delete, just hide)
+        long now = System.currentTimeMillis() / 1000L;
+        List<AnnouncementItem> result = announcementMap.values().stream()
+            .filter(state -> state.endDate >= now)
+            .map(state -> {
+                PinataManifest manifest = null;
+                try {
+                    manifest = rest.getForObject(
+                        "https://gateway.pinata.cloud/ipfs/" + state.ipfsHash,
+                        PinataManifest.class
+                    );
+                } catch (Exception e) {
+                    System.err.println("Pinata fetch error for " + state.ipfsHash + ": " + e.getMessage());
+                }
+                return new AnnouncementItem(
+                    state.ipfsHash,
+                    manifest != null ? manifest.getTitle() : "",
+                    manifest != null ? manifest.getFileCid() : "",
+                    state.startDate,
+                    state.endDate
+                );
+            })
+            .collect(Collectors.toList());
+
+        return result;
     }
 
     @PostMapping(
@@ -82,6 +132,19 @@ public class AdminController {
             return ResponseEntity.status(500).body(
                 java.util.Map.of("error", "Upload failed", "details", e.getMessage())
             );
+        }
+    }
+
+    // Helper class for announcement state
+    private static class AnnouncementState {
+        String ipfsHash;
+        long startDate;
+        long endDate;
+
+        AnnouncementState(String ipfsHash, long startDate, long endDate) {
+            this.ipfsHash = ipfsHash;
+            this.startDate = startDate;
+            this.endDate = endDate;
         }
     }
 }
